api work correctly