@@ -1,5 +1,6 @@
 package my.example.Weather.bot.servise;
 
+import com.sun.research.ws.wadl.HTTPMethods;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
@@ -18,28 +19,29 @@ public class WeatherService {
     private RestTemplate restTemplate;
 
     private final String API_KEY = "618f3266441d9ec859db854ec9ed7c5f"; // Укажите свой API-ключ
-    private final String BASE_URL = "https://api.openweathermap.org/data/2.5/weather";
+    private final String BASE_URL = """
+            https://api.openweathermap.org/data/2.5/weather""";
+
 
     public String getWeather(String cityName) {
         try {
             System.out.println("CityName=" + cityName);
-            String decodedString = URLDecoder.decode(cityName, StandardCharsets.UTF_8);
-            String url = String.format("%s?q=%s&appid=%s&units=metric", BASE_URL, decodedString, API_KEY);
+            String url = String.format("%s?q=%s&appid=%s&units=metric", BASE_URL, cityName, API_KEY);
             // Выполняем GET-запрос
+            System.out.println(url);
             WeatherResponse response = restTemplate.getForObject(url, WeatherResponse.class);
 
             if (response != null && response.getMain() != null) {
                 return String.format("Погода в %s: %s°C, %s",
-                        response.getName(),
+                        cityName,
                         response.getMain().getTemp(),
-                        response.getWeather().get(0).getDescription());
+                        response.getWeather().getFirst().getDescription());
             } else {
                 return "Не удалось получить данные о погоде.";
             }
-
-
         } catch (Exception e) {
             System.err.println(e.getMessage());
+            System.err.println();
         }
 
         return null;
